[gd_scene load_steps=24 format=3 uid="uid://byjvedyar4xp7"]

[ext_resource type="Script" uid="uid://bgbb0gqivnkkn" path="res://mats/game_objs/scenarios/scnr5/scenario.gd" id="1_uk1vj"]
[ext_resource type="AudioStream" uid="uid://di4rxg0jlr1yl" path="res://mats/sounds/preson.wav" id="2_f8jmm"]
[ext_resource type="Script" uid="uid://df8b5oi6clwnk" path="res://mats/game_objs/scenarios/checkpoint.gd" id="3_mwb25"]
[ext_resource type="Script" uid="uid://blhqygxwlfi2c" path="res://mats/game_objs/scenarios/object.gd" id="4_bp4tj"]
[ext_resource type="Script" uid="uid://bk8hquxf2ab2y" path="res://mats/game_objs/masp/masp.gd" id="5_3ph3u"]
[ext_resource type="Script" uid="uid://bf072yoyubkau" path="res://mats/game_objs/prespawner/grid_summon.gd" id="5_v7uov"]
[ext_resource type="Script" uid="uid://td561nxnc58w" path="res://mats/game_objs/prespawner/pre_spawner.gd" id="7_m0v7q"]
[ext_resource type="Script" uid="uid://bi7xsalgfeliw" path="res://mats/game_objs/prespawner/side_spawner.gd" id="8_mwb25"]

[sub_resource type="Resource" id="Resource_t0352"]
script = ExtResource("3_mwb25")
times = Array[float]([12.0, 25.0])
metadata/_custom_type_script = "uid://df8b5oi6clwnk"

[sub_resource type="Resource" id="Resource_m0v7q"]
script = ExtResource("4_bp4tj")
pre_time = 2.0
times = Array[float]([0.0])
metadata/_custom_type_script = "uid://blhqygxwlfi2c"

[sub_resource type="Resource" id="Resource_mwb25"]
script = ExtResource("4_bp4tj")
pre_time = 2.84
times = Array[float]([2.0, 4.0, 6.0, 8.0, 10.0, 12.0, 14.0, 16.0, 18.0, 20.0, 0.0])
metadata/_custom_type_script = "uid://blhqygxwlfi2c"

[sub_resource type="Resource" id="Resource_bp4tj"]
script = ExtResource("4_bp4tj")
pre_time = 1.0
times = Array[float]([0.21, 0.43, 0.64, 0.86, 1.07, 1.29, 1.5, 1.72, 1.93, 2.14, 2.36, 2.57, 2.79, 3.0, 3.22, 3.43, 3.65, 3.86, 4.08, 4.29, 4.5, 4.72, 4.93, 5.15, 5.36, 5.58, 5.79, 6.01, 6.22, 6.44, 6.65, 6.86, 7.08, 7.29, 7.51, 7.72, 7.94, 8.15, 8.37, 8.58, 16.09, 16.3, 16.52, 16.73, 16.95, 17.16, 17.37, 17.59, 17.8, 18.02, 18.23, 18.45, 18.66, 18.88, 19.09, 19.3, 19.52, 19.73, 19.95, 20.16, 20.38, 20.59, 20.81, 21.02, 21.24, 21.45, 21.66, 21.88, 22.09, 22.31, 22.52, 22.74, 22.95, 23.17, 23.38, 23.6, 23.81, 24.02, 24.24, 24.45, 24.67, 24.88, 25.1, 25.31, 25.53, 25.74, 25.95, 26.17, 26.38, 26.6, 26.81, 27.03, 27.24, 27.46, 27.67, 27.89, 28.1, 28.31, 28.53, 28.74, 28.96, 29.17, 29.39, 29.6])
metadata/_custom_type_script = "uid://blhqygxwlfi2c"

[sub_resource type="Resource" id="Resource_f3mdb"]
script = ExtResource("4_bp4tj")
pre_time = 2.0
times = Array[float]([8.07, 9.14, 10.21, 11.29, 12.36, 13.43, 14.5, 15.58])
metadata/_custom_type_script = "uid://blhqygxwlfi2c"

[sub_resource type="Resource" id="Resource_3ph3u"]
script = ExtResource("4_bp4tj")
pre_time = 0.0
times = Array[float]([10.0, 20.0])
metadata/_custom_type_script = "uid://blhqygxwlfi2c"

[sub_resource type="Animation" id="Animation_cbsp2"]
resource_name = "base"

[sub_resource type="Animation" id="Animation_7ufdp"]
resource_name = "track"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_woum6"]
_data = {
&"base": SubResource("Animation_cbsp2"),
&"track": SubResource("Animation_7ufdp")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_f3mdb"]
noise_type = 3
frequency = 0.014

[sub_resource type="Curve" id="Curve_v7uov"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.85, 0.85), 2.86162, 2.86162, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_m0v7q"]
radius = 24.0

[sub_resource type="Curve" id="Curve_mwb25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.85, 0.85), 2.75, 2.75, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwb25"]
size = Vector2(16, 16)

[sub_resource type="Curve" id="Curve_bp4tj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.85, 0.85), 2.75, 2.75, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[node name="scenario" type="Node"]
script = ExtResource("1_uk1vj")
audio = ExtResource("2_f8jmm")
max_time = 32.5
starts_from = 2.5
checkpoints = SubResource("Resource_t0352")
action_times = Array[ExtResource("4_bp4tj")]([SubResource("Resource_m0v7q"), SubResource("Resource_mwb25"), SubResource("Resource_bp4tj"), SubResource("Resource_f3mdb")])
collection = SubResource("Resource_3ph3u")

[node name="ap" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_woum6")
}

[node name="AudioPlayer" type="Node2D" parent="."]
script = ExtResource("5_3ph3u")
busName = "Music"

[node name="act" type="Node2D" parent="."]

[node name="grid_summon" type="Node2D" parent="act"]
script = ExtResource("5_v7uov")
add_to = NodePath("../..")
shout_time = 0.021
noise = SubResource("FastNoiseLite_f3mdb")
rows = 18
seed_change_interval = 2.0
curve = SubResource("Curve_v7uov")
deletion_timer = 2.0

[node name="PreSpawner" type="Node2D" parent="act" node_paths=PackedStringArray("add_to")]
position = Vector2(704, 320)
script = ExtResource("7_m0v7q")
add_to = NodePath("../..")
collision_shape = SubResource("CircleShape2D_m0v7q")
curve = SubResource("Curve_mwb25")
obj_event_time = 0.75
on_deleetion_object = 2
on_deleetion_object_data = {
"collision_shape": SubResource("RectangleShape2D_mwb25"),
"spawn": true,
"speed_from": 700.0,
"speed_to": 1500.0,
"summon_count_from": 3,
"summon_count_to": 7,
"summon_range": 360.0
}
metadata/_custom_type_script = "uid://td561nxnc58w"

[node name="SideSpawner" type="Node2D" parent="act" node_paths=PackedStringArray("add_to")]
script = ExtResource("8_mwb25")
add_to = NodePath("../..")
curve = SubResource("Curve_bp4tj")
metadata/_custom_type_script = "uid://bi7xsalgfeliw"

[node name="paths" type="Node" parent="."]

[connection signal="action_activated" from="." to="." method="_on_action_activated"]
[connection signal="track_started" from="." to="." method="_on_track_started"]
